# intransitivity

./: CHANGELOG.md  README.md  intransitivity.cabal
app/: Main.hs
benchmark/: Main.hs
src/: Intransitivity.hs
test/: Spec.hs
