cabal-version:       2.4
name:                intransitivity
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/metaxis/intransitivity#intransitivity) for more details.
homepage:            https://github.com/metaxis/intransitivity
bug-reports:         https://github.com/metaxis/intransitivity/issues
license:             Unlicense
license-file:        UNLICENSE
author:              metaxis
maintainer:          metaxis <willgame@mail.ru>
copyright:           2021 metaxis
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/metaxis/intransitivity.git

common common-options
  build-depends:       base ^>= 4.14.1.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Intransitivity
  build-depends:       record-dot-preprocessor  ^>=0.2.11
                     , record-hasfield
                     , random
                     , async
                     , stm

executable intransitivity
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       intransitivity
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite intransitivity-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       intransitivity
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark intransitivity-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       intransitivity
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
